rustdocs/errors/rust-bitcoin-bitcoin-src-psbt-map-global.rs.txt
error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:3:5
  |
3 | use internals::ToU64 as _;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
3 + extern crate internals;
  |

error[E0432]: unresolved import `io`
 --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:4:5
  |
4 | use io::{BufRead, Cursor, Read};
  |     ^^
  |     |
  |     unresolved import
  |     help: a similar path exists: `std::io`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `consensus`
 --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:7:12
  |
7 | use crate::consensus::encode::MAX_VEC_SIZE;
  |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
  |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
  |
3 + extern crate consensus;
  |

error[E0432]: unresolved import `crate::bip32`
 --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:6:12
  |
6 | use crate::bip32::{ChildNumber, DerivationPath, Fingerprint, Xpub};
  |            ^^^^^ use of unresolved module or unlinked crate `bip32`
  |
help: you might be missing a crate named `bip32`, add it to your project and import it in your code
  |
3 + extern crate bip32;
  |

error[E0432]: unresolved import `crate::consensus`
 --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:8:12
  |
8 | use crate::consensus::{encode, Decodable};
  |            ^^^^^^^^^ use of unresolved module or unlinked crate `consensus`
  |
help: you might be missing a crate named `consensus`, add it to your project and import it in your code
  |
3 + extern crate consensus;
  |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `psbt`
  --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:10:12
   |
10 | use crate::psbt::map::Map;
   |            ^^^^ use of unresolved module or unlinked crate `psbt`
   |
help: you might be missing a crate named `psbt`, add it to your project and import it in your code
   |
 3 + extern crate psbt;
   |

error[E0432]: unresolved import `crate::prelude`
 --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:9:12
  |
9 | use crate::prelude::{btree_map, BTreeMap, Vec};
  |            ^^^^^^^
  |            |
  |            unresolved import
  |            help: a similar path exists: `std::prelude`

error[E0432]: unresolved import `crate::psbt`
  --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:11:12
   |
11 | use crate::psbt::{raw, Error, Psbt};
   |            ^^^^ use of unresolved module or unlinked crate `psbt`
   |
help: you might be missing a crate named `psbt`, add it to your project and import it in your code
   |
 3 + extern crate psbt;
   |

error[E0432]: unresolved import `crate::transaction`
  --> ../rust-bitcoin/bitcoin/src/psbt/map/global.rs:12:12
   |
12 | use crate::transaction::Transaction;
   |            ^^^^^^^^^^^ use of unresolved module or unlinked crate `transaction`
   |
help: you might be missing a crate named `transaction`, add it to your project and import it in your code
   |
 3 + extern crate transaction;
   |

error: aborting due to 9 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
